--- a/index.html
+++ b/index.html
@@ -10,22 +10,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
+    <!-- Nav -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container">
+        <a class="navbar-brand order-1" href="https://www.teamtreehouse.com" target="_blank">Presented by Treehouse</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link"href="#home">Home</a>
+            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#speaker">Speakers</a>
+            <a class="nav-link " href="#schedule">Schedule</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- /nav -->
+    <!-- jumbotron[Attention section] -->
+    <div class=" p-5 bg-info text-white text-sm-center">
+      <h1 class="display-2">Full Stack Conf</h1>
+      <p>A One-day Conference About All Things JavaScript</p>
+    </div>
+    <!-- /jumbotron -->
     <div class="container pt-4">
         <!-- About -->
       <div class="row">
-        <div class="col-lg">
+        <div class="col-lg order-lg-2">
           <h3 class="mb-4">About Full Stack Conf</h3>
-          <img src="img/pdx.jpg" alt="Portland" class="mb-4 img-fluid rounded">
+          <img src="img/pdx.jpg" alt="Portland" class="mb-4 img-fluid rounded d-none d-sm-block">
           <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
           <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance your career as a web developer.</p>
         </div>
-        <div class="col-lg">
+        <div class="col-lg order-lg-1">
           <h3 class="mb-4">Expert Speakers</h3>
           <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
           <p>Want to meet the international JavaScript community and share skills with some of the world's top experts, hackers, and makers? Be the first to know what to expect for the future of JavaScript.</p>
           <p>Full Stack Conf is committed to being inclusive and welcoming for everyone. We look forward to another intensive day of learning and sharing.</p>
         </div>
-        <div class="col-lg">
+        <div class="col-lg order-lg-3">
           <h3 class="mb-4">What You'll Learn</h3>
           <ul>
             <li><strong>MongoDB</strong>: NoSQL database</li>
@@ -43,6 +67,24 @@
       <!-- schedule -->
       <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
       <!--/schedule  -->
+      <!-- signup form -->
+      <hr>
+      <div class="row py-4 text-muted">
+        <div class="col-md col-xl-5">
+          <p><strong>About Treehouse</strong></p>
+          <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and change the world.</p>
+        </div>
+        <div class="col-md col-xl-5 ms-auto">
+          <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Email">
+            <span class="input-group-btn">
+              <button class="btn btn-primary" type="button">Sign up</button>
+            </span>
+          </div>
+        </div>
+      </div>
+      <hr><!-- /signup form -->
     </div><!--/container-->
     <!-- Optional JavaScript -->
     <!--Bootstrap JS -->
