--- a/index.html
+++ b/index.html
@@ -332,6 +332,37 @@
                     <input class="form-control" id="cvv" type="text">
                   </div>
                 </div>
+                <div class="row">
+                  <label  class=" form-label col-lg-12">Expiration Date:</label>
+                  <div class="mb-3 col-lg-8">
+                    <select class="custom-select form-select" id="exp-month">
+                      <option value="1">1 - January</option>
+                      <option value="2">2 - February</option>
+                      <option value="3">3 - March</option>
+                      <option value="4">4 - April</option>
+                      <option value="5">5 - May</option>
+                      <option value="6">6 - June</option>
+                      <option value="7">7 - July</option>
+                      <option value="8">8 - August</option>
+                      <option value="9">9 - September</option>
+                      <option value="10">10 - October</option>
+                      <option value="11">11 - November</option> 
+                      <option value="12">12 - December</option>
+                    </select> 
+                  </div>
+
+                  <div class="mb-3 col-lg">
+                    <select class="custom-select form-select" id="exp-year">
+                      <option value="2016">2016</option>
+                      <option value="2017">2017</option>
+                      <option value="2018">2018</option>
+                      <option value="2019">2019</option>
+                      <option value="2020">2020</option>
+                    </select>  
+                  </div>
+                </div>
+                <hr class="mb-4">
+                <button type="button" class="btn btn-primary btn-lg">Register</button>
             </form>
             <!-- /registration form -->
           </div>
