--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
       <h1 id="schedule" class="display-4 text-center my-5 text-muted">Schedule</h1>
       <!-- callout button -->
       <button type="button" class="btn btn-outline-info btn-lg d-block mx-auto my-5" data-bs-toggle="modal" data-bs-target="#register">Dont miss out register now!</button>
-      <ul class="list-group">
-        <li class="list-group-item" data-bs-toggle="collapse" href="#keynote-more-info" role="button" aria-expanded="false">
+      <div class="list-group">
+        <a class="list-group-item list-group-item-action" data-bs-toggle="collapse" href="#keynote-more-info" role="button" aria-expanded="false">
           <div class="d-flex justify-content-between">
             <h5 class="mb-1">Keynote: Internet of things</h5>
             <span class="badge rounded-pill bg-info text-light p-2">9:00am</span>
@@ -152,9 +152,9 @@
               Modi sequi provident hic est exercitationem, consequatur quam fugiat, eum ipsum temporibus blanditiis in sit facilis nemo unde assumenda expedita excepturi? Consequuntur voluptatem molestias id optio. Eius commodi perspiciatis quia?</p>
             </div>
           </div>
-        </li>
+        </a>
 
-        <li class="list-group-item" data-bs-toggle="collapse" href="#react-basics" role="button" aria-expanded="false">
+        <a class="list-group-item list-group-item-action" data-bs-toggle="collapse" href="#react-basics" role="button" aria-expanded="false">
           <div class="d-flex justify-content-between">
             <h5 class="mb-1">React Basics</h5>
             <span class="badge rounded-pill bg-info text-light p-2">10:00am</span>
@@ -168,9 +168,9 @@
               Modi sequi provident hic est exercitationem, consequatur quam fugiat, eum ipsum temporibus blanditiis in sit facilis nemo unde assumenda expedita excepturi? Consequuntur voluptatem molestias id optio. Eius commodi perspiciatis quia?</p>
             </div>
           </div>
-        </li>
+        </a>
 
-        <li class="list-group-item" data-bs-toggle="collapse" href="#mongo" role="button" aria-expanded="false">
+        <a class="list-group-item list-group-item-action" data-bs-toggle="collapse" href="#mongo" role="button" aria-expanded="false">
           <div class="d-flex justify-content-between">
             <h5 class="mb-1">Hey, Mongo</h5>
             <span class="badge rounded-pill bg-info text-light p-2">11:00am</span>
@@ -184,7 +184,7 @@
               Modi sequi provident hic est exercitationem, consequatur quam fugiat, eum ipsum temporibus blanditiis in sit facilis nemo unde assumenda expedita excepturi? Consequuntur voluptatem molestias id optio. Eius commodi perspiciatis quia?</p>
             </div>
           </div>
-        </li>
+        </a>
 
         <li class="list-group-item list-group-item-success">
           <div class="d-flex justify-content-between">
@@ -194,7 +194,7 @@
           <p class="mb-1">Free Pizza for everyone</p>
         </li>
 
-        <li class="list-group-item" data-bs-toggle="collapse" href="#ecma" role="button" aria-expanded="false">
+        <a class="list-group-item list-group-item-action" data-bs-toggle="collapse" href="#ecma" role="button" aria-expanded="false">
           <div class="d-flex justify-content-between">
             <h5 class="mb-1">Introducing ES2015</h5>
             <span class="badge rounded-pill bg-info text-light p-2">1:00pm</span>
@@ -208,8 +208,8 @@
               Modi sequi provident hic est exercitationem, consequatur quam fugiat, eum ipsum temporibus blanditiis in sit facilis nemo unde assumenda expedita excepturi? Consequuntur voluptatem molestias id optio. Eius commodi perspiciatis quia?</p>
             </div>
           </div>
-        </li> 
-        <li class="list-group-item" data-bs-toggle="collapse" href="#redux" role="button" aria-expanded="false">
+        </a> 
+        <a class="list-group-item list-group-item-action" data-bs-toggle="collapse" href="#redux" role="button" aria-expanded="false">
           <div class="d-flex justify-content-between">
             <h5 class="mb-1">Getting Started With Redux</h5>
             <span class="badge rounded-pill bg-info text-light p-2">2:00pm</span>
@@ -223,8 +223,8 @@
               Modi sequi provident hic est exercitationem, consequatur quam fugiat, eum ipsum temporibus blanditiis in sit facilis nemo unde assumenda expedita excepturi? Consequuntur voluptatem molestias id optio. Eius commodi perspiciatis quia?</p>
             </div>
           </div>
-        </li> 
-        <li class="list-group-item" data-bs-toggle="collapse" href="#babel" role="button" aria-expanded="false">
+        </a> 
+        <a class="list-group-item list-group-item-action" data-bs-toggle="collapse" href="#babel" role="button" aria-expanded="false">
           <div class="d-flex justify-content-between">
             <h5 class="mb-1">What's Babel?</h5>
             <span class="badge rounded-pill bg-info text-light p-2">3:00pm</span>
@@ -238,8 +238,8 @@
               Modi sequi provident hic est exercitationem, consequatur quam fugiat, eum ipsum temporibus blanditiis in sit facilis nemo unde assumenda expedita excepturi? Consequuntur voluptatem molestias id optio. Eius commodi perspiciatis quia?</p>
             </div>
           </div>
-        </li>   
-      </ul>
+        </a>   
+      </div>
       <!--/schedule  -->
 
       <!-- signup form -->
@@ -251,12 +251,12 @@
         </div>
         <div class="col-md col-xl-5 ms-auto">
           <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Email">
+          <form class="input-group needs-validation" novalidate>
+            <input type="email" class="form-control" placeholder="Email" required>
             <span class="input-group-btn">
-              <button class="btn btn-primary" type="button">Sign up</button>
+              <button class="btn btn-primary" type="submit">Sign up</button>
             </span>
-          </div>
+          </form>
         </div>
       </div>
       <hr><!-- /signup form -->
@@ -289,7 +289,7 @@
           </ul>
         </div>
         <div class="col-md text-md-right">
-          <small>&copy; 2017 Full Stack Conf &amp; Treehouse</small>
+          <small>&copy; 2021 Full Stack Conf &amp; Treehouse</small>
         </div>
       </div><!-- /footer -->
 
